2006-02-14  Simon Josefsson  <jas@extundo.com>

	Sync from gnulib.
	* getaddrinfo.m4: Look for getaddrinfo inside ws2tcip.h and
	-lws2_32.  Protect sys/socket.h and netdb.h #include's.  Include
	ws2tcpip.h with WINVER=0x0501.  All for mingw32.
	* socklen.m4: Look in ws2tcpip.h too, for mingw32.

2006-02-05  Paul Eggert  <eggert@cs.ucla.edu>

	* extensions.m4 (gl_USE_SYSTEM_EXTENSIONS): Don't #define
	__EXTENSIONS__ if this causes compilation to fail.  Problem
	reported by Nelson H. F. Beebe with Solaris 10 and Sun C 5.7
	c89 -D_XOPEN_SOURCE -D_XOPEN_SOURCE_EXTENDED.

2006-01-26  Paul Eggert  <eggert@cs.ucla.edu>

	* stdbool.m4 (AC_HEADER_STDBOOL): Sync from gnulib.
	Use 'defined __GNUC__' rather than __GNUC__.

2006-01-25  Paul Eggert  <eggert@cs.ucla.edu>

	* stdbool.m4: Merge from gnulib; we still don't quite match
	exactly, but we're getting closer.
	(AC_HEADER_STDBOOL): Add some comments.

2006-01-24  Jim Meyering  <jim@meyering.net>

	* openat.m4 (gl_FUNC_OPENAT): Add AC_LIBSOURCES([intprops.h]).
	Reported by Mark D. Baushke.

2006-01-23  Paul Eggert  <eggert@cs.ucla.edu>

	* getopt.m4 (gl_PREREQ_GETOPT): Check for getenv decl.

2006-01-20  Paul Eggert  <eggert@cs.ucla.edu>

	* lib-ignore.m4 (gl_IGNORE_UNUSED_LIBRARIES): Use -Wl,-z,ignore
	rather than -Xlinker -z -Xlinker ignore, as it's more portable.
	Suggested by Bruno Haible.

2006-01-17  Jim Meyering  <jim@meyering.net>

	* fts.m4 (gl_FUNC_FTS_CORE): Depend on gl_FUNC_OPENAT.

2006-01-16  Paul Eggert  <eggert@cs.ucla.edu>

	* lib-ignore.m4 (gl_IGNORE_UNUSED_LIBRARIES): Don't use ldd, as
	it's not portable and it doesn't work with cross-compiles.
	Problem reported by Bruno Haible.  Fix missing-$ typo in
	'test "gl_cv_ignore_unused_libraries" ...' that prevented
	-zignore from being used with Sun's C compiler.

2006-01-13  Jim Meyering  <jim@meyering.net>

	* ls-mntd-fs.m4 (AC_FUNC_GETMNTENT): Invoke AC_CHECK_FUNCS(getmntent)
	unconditionally so that tests of $ac_cv_func_getmntent (e.g., in