@@ -1,3 +1,15 @@
+2006-02-16  Eric Blake  <ebb9@byu.net>
+
+	Sync from gnulib.
+	* sys_socket_h.m4: New file. Solves 'present but cannot compile'
+	warnings on cygwin, which cannot use ws2tcpip.h.
+	* socklen.m4 (gl_TYPE_SOCKLEN_T): Use gl_HEADER_SYS_SOCKET.
+	Don't use ws2tcpip.h if sys/socket.h works.
+	* getaddrinfo.m4 (gl_PREREQ_GETADDRINFO): Use
+	gl_HEADER_SYS_SOCKET.
+	(gl_GETADDRINFO): Don't use ws2tcpip.h when sys/socket.h is
+	present.
+
 2006-02-14  Simon Josefsson  <jas@extundo.com>
 
 	Sync from gnulib.
